# gazebo_sfm_plugin

./: CMakeLists.txt  README.md
env-hooks/: gazebo_sfm_plugin.dsv.in
include/gazebo_sfm_plugin/: PedestrianSFMPlugin.h
src/: PedestrianSFMPlugin.cpp
worlds/: cafe.world
